# Token22

./: Anchor.toml  PROJECT_IMPLEMENTATION_SUMMARY.txt  README.md  package-lock.json
programs/amm/: Cargo.toml
programs/amm/src/: error.rs  lib.rs
programs/amm/src/instructions/: bridge_unwrap.rs  bridge_wrap.rs  deposit.rs  initialize.rs  initialize_bridge_pool.rs  initialize_list.rs  mod.rs  swap.rs  transferhook.rs  withdraw.rs
programs/amm/src/state/: mod.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
solana-hook-amm/: .gitignore  package.json  pnpm-lock.yaml
solana-hook-amm/.next/: trace
solana-hook-amm/.next/cache/: .rscinfo
solana-hook-amm/.next/cache/webpack/client-development/: index.pack.gz.old
solana-hook-amm/.next/cache/webpack/client-development-fallback/: index.pack.gz.old
solana-hook-amm/.next/cache/webpack/server-development/: index.pack.gz.old
solana-hook-amm/.next/server/: server-reference-manifest.json
solana-hook-amm/app/: page.tsx
solana-hook-amm/components/: anchor-amm.tsx  create-hooked-token.tsx  create-pool.tsx  orca-pools.tsx  pool-list.tsx  swap.tsx
solana-hook-amm/components/solana/: wallet-provider.tsx
solana-hook-amm/components/ui/: badge.tsx  toast.tsx  toaster.tsx  use-toast.tsx
solana-hook-amm/hooks/: use-toast.tsx
solana-hook-amm/lib/: amm-client.ts  pool-context.tsx  solana-hooks.ts
solana-hook-amm/lib/idl/: amm.json  amm.ts  transfer_hook.json
tests/: amm.ts  bridge_amm_integration.ts  comprehensive_amm_test.ts
