[package]
name = "amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
spl-tlv-account-resolution = {version="0.10.0"}
spl-token-2022 = {version="9.0.0",features=["no-entrypoint"]}
spl-transfer-hook-interface = {version="0.10.0"}


constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git"}

